--- a/package.json
+++ b/package.json
@@ -1,21 +1,41 @@
 {
   "name": "madeupflix",
   "version": "0.1.0",
+  "description": "Your Reliable On The Fly Anime Services!",
+  "author": "madeupflix",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "dev": "vite"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "daisyui": "^2.46.0",
+    "flowbite": "^1.5.5",
+    "postcss": "^8",
+    "readme-md-generator": "^1.0.0",
     "register-service-worker": "^1.7.2",
+    "tailwindcss": "^3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "vite": "^4.0.3",
+    "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
