--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@cloudgeek/playcore-hls": "^0.1.7",
+    "@cloudgeek/vue3-video-player": "^0.3.10",
     "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
     "daisyui": "^2.46.0",
-    "flowbite": "^1.5.5",
+    "idb-keyval": "^6.2.0",
+    "lodash": "^4.17.21",
     "postcss": "^8",
     "readme-md-generator": "^1.0.0",
     "register-service-worker": "^1.7.2",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
